--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,7 +14,7 @@ $(function() {
         var inventoryText = "<strong>Available</strong>";
         if(data["inventory"] === "0"){
           inventoryText = "<strong>Sold Out</strong>";
-        var descriptionText = "<p>" + description + "</p><p>" + inventoryText + "</p>";
+        var descriptionText = "<p>" + data["description"] + "</p><p>" + inventoryText + "</p>";
         $("#product-" + id).html(descriptionText);
       });
     });
