--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,7 +12,7 @@ $(function() {
     $.get("/products/" + id + ".json", function(data) {
         debugger;
         var inventoryText = "<strong>Available</strong>";
-        if(data["inventory"] === "0"){
+        if(data["inventory"] === 0){
           inventoryText = "<strong>Sold Out</strong>";
         }
         var descriptionText = "<p>" + data["description"] + "</p><p>" + inventoryText + "</p>";
